# llvm-sc

./: CMakeLists.txt  README.md
cmake/: FindCoroutines.cmake  project_settings.cmake  sanitizers.cmake
include/sc/: annotation.hpp  annotation.tpp  bimap.hpp  builder.hpp  case.hpp  concepts.hpp  config.hpp  constant.hpp  context.hpp  coroutine.hpp  erase.hpp  format.hpp  generator.hpp  init.hpp  ir.hpp  meta.hpp  meta.tpp  query.hpp  ranges.hpp  transformer.hpp  types.hpp  warnings.hpp
src/: CMakeLists.txt  annotation.cpp  constant.cpp  context.cpp  init.cpp  meta.cpp  types.cpp
test/: CMakeLists.txt
test/include/: utils.hpp
test/src/: annotation.cpp  builder.cpp  constant.cpp  init.cpp  meta.cpp  ranges.cpp  transformer.cpp
